--- a/package.json
+++ b/package.json
@@ -30,5 +30,13 @@
     "pinia": "^2.1.7",
     "typescript": "^5.3.3",
     "vue-tsc": "^1.8.25"
+  },
+  "dependencies": {
+    "puppeteer": "^21.6.0"
+  },
+  "pnpm": {
+    "overrides": {
+      "vite@=4.5.0": ">=4.5.1"
+    }
   }
 }
