--- a/package.json
+++ b/package.json
@@ -13,10 +13,6 @@
     "lint": "eslint .",
     "typecheck": "vue-tsc --noEmit"
   },
-  "dependencies": {
-    "chrome-aws-lambda": "^10.1.0",
-    "puppeteer-core": "^21.6.0"
-  },
   "devDependencies": {
     "@antfu/eslint-config": "^2.4.0",
     "@iconify-json/carbon": "^1.1.24",
@@ -34,6 +30,9 @@
     "pinia": "^2.1.7",
     "typescript": "^5.3.3",
     "vue-tsc": "^1.8.25"
+  },
+  "dependencies": {
+    "puppeteer": "^21.6.0"
   },
   "pnpm": {
     "overrides": {
