--- a/package.json
+++ b/package.json
@@ -31,13 +31,12 @@
     "typescript": "^5.3.3",
     "vue-tsc": "^1.8.25"
   },
+  "dependencies": {
+    "puppeteer": "^21.6.0"
+  },
   "pnpm": {
     "overrides": {
       "vite@=4.5.0": ">=4.5.1"
     }
-  },
-  "dependencies": {
-    "chrome-aws-lambda": "^10.1.0",
-    "puppeteer-core": "^21.6.0"
   }
 }
